# system-design

./: .gitignore  README.md  cleanup.sh  dbHelper.py  main.py  pyproject.toml  requirements.txt  shorturl.db  shorturl.sqlite  sql.sql  test.py
.github/workflows/: master_veryshort.yml
api/: url.py  user.py
auth/: auth.py
config/: __init__.py  app.cfg  config.py
exceptions/: exceptions.py  url_exceptions.py
models/: base.py  url.py  user.py
schemas/: token_schema.py  url_schema.py  user_schema.py
static/: index.html  url_shortener.html
url_shortener/: main.py  requirements.txt  shorturl.db
url_shortener/static/: url_shortener.html
validation/: url_validator.py
