[tool.poetry]
name = "url-shorten"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi = "^0.105.0"
passlib = "^1.7.4"
requests = "^2.31.0"
sqlmodel = "^0.0.14"
bcrypt = "^4.1.2"
gunicorn = "^21.2.0"
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"
pydantic = "1.10.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
